<!--
  ~ Created By nedaluof  2020.
  -->

<resources>
    <string name="app_name">Qurany</string>
    <string name="playback_channel_name" translatable="false">qurany_app</string>
    <string name="playback_channel_des" translatable="false">qurany_app notification channel</string>
    <string name="notification_id" translatable="false">Qurany-channel</string>
    <string name="reciters_bar_title">Reciters List</string>
    <string name="ic_sura_vp1">M203.271,52.852H89.541c-1.392,11.367 -8.421,21.161 -18.817,26.114v177.033c7.051,3.358 12.545,8.947 15.79,15.74c1.54,3.223 2.579,6.714 3.026,10.372h113.731c0.448,-3.658 1.487,-7.149 3.027,-10.372c3.245,-6.793 8.74,-12.382 15.79,-15.74V78.965C211.694,74.013 204.665,64.219 203.271,52.852zM137.36,64.577c0.827,-0.566 1.735,-0.959 2.695,-1.195c0.78,-0.887 1.629,-1.609 2.54,-2.153c1.844,-2.232 3.81,-3.512 3.81,-3.512s1.968,1.279 3.811,3.512c0.912,0.544 1.763,1.267 2.542,2.153c0.962,0.236 1.87,0.629 2.696,1.195c3.221,2.209 4.442,6.505 3.65,11.205c0.49,0.621 0.758,1.288 0.758,1.984c0,0.697 -0.268,1.361 -0.758,1.982c0.792,4.7 -0.43,8.994 -3.65,11.204c-0.826,0.568 -1.734,0.964 -2.696,1.195c-0.779,0.886 -1.63,1.612 -2.542,2.153c-1.843,2.234 -3.808,3.513 -3.808,3.513s-1.969,-1.278 -3.813,-3.513c-0.911,-0.541 -1.76,-1.268 -2.54,-2.153c-0.96,-0.231 -1.869,-0.627 -2.695,-1.195c-3.221,-2.21 -4.443,-6.504 -3.65,-11.204c-0.49,-0.621 -0.757,-1.285 -0.757,-1.982c0,-0.696 0.267,-1.363 0.757,-1.984C132.917,71.082 134.139,66.786 137.36,64.577zM117.535,125.393c2.64,-1.811 5.538,-3.065 8.606,-3.806c2.48,-2.83 5.198,-5.151 8.094,-6.875c5.899,-7.135 12.17,-11.211 12.17,-11.211s6.272,4.076 12.171,11.209c2.896,1.725 5.615,4.047 8.096,6.877c3.07,0.74 5.967,1.995 8.606,3.806c10.278,7.05 14.175,20.76 11.648,35.76c1.563,1.979 2.416,4.108 2.416,6.329c0,2.22 -0.854,4.349 -2.416,6.33c2.527,14.998 -1.369,28.709 -11.648,35.758c-2.64,1.811 -5.536,3.066 -8.606,3.807c-2.48,2.83 -5.199,5.151 -8.096,6.875c-5.898,7.133 -12.168,11.209 -12.168,11.209s-6.273,-4.074 -12.173,-11.208c-2.897,-1.724 -5.614,-4.046 -8.095,-6.876c-3.069,-0.74 -5.966,-1.996 -8.606,-3.807c-10.277,-7.049 -14.174,-20.76 -11.646,-35.758c-1.563,-1.982 -2.418,-4.11 -2.418,-6.33c0,-2.221 0.855,-4.35 2.418,-6.329C103.36,146.152 107.258,132.442 117.535,125.393zM150.217,273.733c-1.843,2.233 -3.808,3.512 -3.808,3.512s-1.969,-1.279 -3.813,-3.512c-0.855,-0.51 -1.652,-1.184 -2.392,-1.995c-0.049,-0.054 -0.1,-0.103 -0.148,-0.157c-0.96,-0.236 -1.869,-0.628 -2.695,-1.195c-3.221,-2.209 -4.443,-6.506 -3.65,-11.205c-0.49,-0.621 -0.757,-1.287 -0.757,-1.984c0,-0.697 0.267,-1.361 0.757,-1.984c-0.793,-4.697 0.429,-8.992 3.65,-11.203c0.827,-0.567 1.735,-0.962 2.695,-1.195c0.78,-0.886 1.629,-1.611 2.54,-2.153c1.844,-2.233 3.81,-3.511 3.81,-3.511s1.968,1.277 3.811,3.511c0.912,0.542 1.763,1.268 2.542,2.153c0.962,0.233 1.87,0.628 2.696,1.195c3.221,2.211 4.442,6.506 3.65,11.203c0.49,0.623 0.758,1.287 0.758,1.984c0,0.697 -0.268,1.363 -0.758,1.984c0.792,4.699 -0.43,8.996 -3.65,11.205c-0.826,0.567 -1.734,0.959 -2.696,1.195c-0.048,0.055 -0.099,0.104 -0.148,0.157C151.871,272.55 151.072,273.224 150.217,273.733z</string>
    <string name="ic_sura_vp2">M269.31,0H72.645h-6.992h-8.781c-1.734,0 -3.357,0.853 -4.34,2.282l-17.562,25.52c-0.716,1.042 -1.016,2.283 -0.897,3.5c-0.006,0.105 -0.031,0.205 -0.031,0.312v271.738c0,2.91 2.359,5.269 5.269,5.269h214.193c2.91,0 5.269,-2.358 5.269,-5.269v-21.075h10.538c2.91,0 5.269,-2.358 5.269,-5.268V5.269C274.578,2.359 272.22,0 269.31,0zM229.921,258.578c0,1.624 -1.002,3.079 -2.518,3.658c-5.046,1.927 -9.196,5.28 -12.083,9.502c-2.127,3.112 -3.564,6.696 -4.158,10.537c-0.191,1.238 -0.3,2.501 -0.311,3.784c-0.018,2.149 -1.767,3.883 -3.916,3.883H85.878c-2.15,0 -3.898,-1.733 -3.916,-3.883c-0.011,-1.283 -0.119,-2.546 -0.31,-3.784c-0.593,-3.841 -2.03,-7.425 -4.158,-10.537c-2.886,-4.222 -7.037,-7.575 -12.083,-9.502c-1.517,-0.579 -2.519,-2.034 -2.519,-3.658V76.386c0,-1.624 1.002,-3.079 2.518,-3.658c9.965,-3.808 16.462,-13.16 16.552,-23.825c0.018,-2.15 1.766,-3.883 3.916,-3.883h121.057c2.149,0 3.898,1.733 3.916,3.882c0.091,10.667 6.588,20.019 16.552,23.826c1.517,0.579 2.518,2.034 2.518,3.658V258.578zM264.041,271.738h-5.269V31.612c0,-2.91 -2.358,-5.269 -5.269,-5.269H64.537l10.878,-15.807h188.626V271.738z</string>
    <string name="reciters_suras_bar_title">Suras Of Reciter</string>
    <string name="lang_arabic">العربية</string>
    <string name="lang_english">English</string>
    <string name="lang_france">Français</string>
    <string name="lang_russia">Русский</string>
    <string name="lang_germany">Deutsch</string>
    <string name="lang_spain">Español</string>
    <string name="lang_turkey">Türkçe</string>
    <string name="lang_china">中文</string>
    <string name="lang_tahi">ไทย</string>
    <string name="lang_urdu">اردو</string>
    <string name="lang_bengali">বাংলা</string>
    <string name="lang_bosnia">Bosanski</string>
    <string name="lang_uyghur">ئۇيغۇرچە</string>
    <string name="lang_farsi">فارسى</string>
    <string name="lang_tajeki">Тоҷикӣ</string>
    <string name="lang_malbari">മലയാളം</string>
    <string name="lang_tagalog">Tagalog</string>
    <string name="lang_indonesia">Indonesia</string>
    <string name="lang_portuguese">Português</string>
    <string name="lang_hausa">Hausa</string>
    <string name="lang_swahili">Kiswahili</string>

    <string name="download_manager_title">Downloading Sura : </string>

    <string name="dexter_permission_error">Error Occur when request permission.</string>

    <string name="dialoge_permission_title">Need Permission !</string>
    <string name="dialoge_permission_message">This app needs permission to use Download feature. You can grant them in app settings.</string>
    <string name="dialoge_permission_gosettings">GO TO SETTINGS</string>
    <string name="dialoge_permission_cancel">Cancel</string>


    <string name="home_nav_title">Reciters</string>
    <string name="favorite_nav_title">My Reciters</string>

    <string name="ic_setting_path">M19.14,12.94c0.04,-0.3 0.06,-0.61 0.06,-0.94c0,-0.32 -0.02,-0.64 -0.07,-0.94l2.03,-1.58c0.18,-0.14 0.23,-0.41 0.12,-0.61l-1.92,-3.32c-0.12,-0.22 -0.37,-0.29 -0.59,-0.22l-2.39,0.96c-0.5,-0.38 -1.03,-0.7 -1.62,-0.94L14.4,2.81c-0.04,-0.24 -0.24,-0.41 -0.48,-0.41h-3.84c-0.24,0 -0.43,0.17 -0.47,0.41L9.25,5.35C8.66,5.59 8.12,5.92 7.63,6.29L5.24,5.33c-0.22,-0.08 -0.47,0 -0.59,0.22L2.74,8.87C2.62,9.08 2.66,9.34 2.86,9.48l2.03,1.58C4.84,11.36 4.8,11.69 4.8,12s0.02,0.64 0.07,0.94l-2.03,1.58c-0.18,0.14 -0.23,0.41 -0.12,0.61l1.92,3.32c0.12,0.22 0.37,0.29 0.59,0.22l2.39,-0.96c0.5,0.38 1.03,0.7 1.62,0.94l0.36,2.54c0.05,0.24 0.24,0.41 0.48,0.41h3.84c0.24,0 0.44,-0.17 0.47,-0.41l0.36,-2.54c0.59,-0.24 1.13,-0.56 1.62,-0.94l2.39,0.96c0.22,0.08 0.47,0 0.59,-0.22l1.92,-3.32c0.12,-0.22 0.07,-0.47 -0.12,-0.61L19.14,12.94zM12,15.6c-1.98,0 -3.6,-1.62 -3.6,-3.6s1.62,-3.6 3.6,-3.6s3.6,1.62 3.6,3.6S13.98,15.6 12,15.6z</string>
    <string name="my_reciters_appbar_title">My Reciters</string>

    <string name="no_reciters">You Not Added Any Reciters To your My Reciters List , try add one by go to reciters list then click on heart button (*_^).</string>

    <string name="sura_count">Sura Count : </string>

    <string name="alrt_add_success_title">Added Successfully</string>
    <string name="alrt_add_success_msg">The Reciter Added Successfully to your Reciters List</string>

    <string name="alrt_err_occur_title">Error Occur</string>
    <string name="alrt_err_occur_msg">Somthing went Wrong !</string>

    <string name="alrt_delete_title">Delete Reciter </string>
    <string name="alrt_delete_msg1">Are you sure to delete ( </string>
    <string name="alrt_delete_msg2"> ) from your resiters list</string>
    <string name="alrt_delete_btn_ok">Delete</string>
    <string name="alrt_delete_btn_cancel">Cancel</string>
    <string name="alrt_delete_success">Deleted Successfully</string>
    <string name="alrt_delete_fail">Deletion Fail</string>

    <string name="alrt_download_completed_title">Download Completed</string>
    <string name="alrt_download_completed_msg">Now you can play the sura in offline mode</string>
    <string name="alrt_download_start_title">Download Started Pleast Wait</string>

    <string name="alrt_no_internet_title">No Internet Connection</string>
    <string name="alrt_no_internet_msg">Make sure you are connected to the internet</string>.

    <string name="alrt_sura_exist_title">The Sura Exist</string>
    <string name="alrt_sura_exist_message">The sura is already downloaded , you can run it by hit play button.</string>

    <string name="controller_ffwd">player forward</string>
    <string name="controller_rew">player rewind</string>
    <string name="controller_play">player play</string>
    <string name="controller_pause">player pause</string>


    <string name="notification_channel" translatable="false">APP_Channel_ID</string>
    <string name="notification_channel_description" translatable="false">Channel ID for APP</string>

    <string name="app_version">version : </string>

    <string name="exit_app_msg">Please press back again to exit</string>

</resources>
